discussion/kv_engine/186947/186947_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54810: Include overflow samples in Prometheus histograms

Make use of the newly-added overflow metrics in timing histograms to
    show the number of samples which exceeded the representable range of
    the histogram.

Example output from _prometheusMetricsHigh endpoint, with 1000
"overflowed" samples synthesized:

    $ http --auth Administrator:asdasd http://localhost:11996/_prometheusMetricsHigh|rg kv_cmd_duration_seconds | rg -w GET
    kv_cmd_duration_seconds_count{bucket="default",opcode="GET"} 4052 1676562996000
    kv_cmd_duration_seconds_sum{bucket="default",opcode="GET"} 0.049494 1676562996000
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="0.000001"} 1 1676562996000
    ...
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="33.554432"} 3052 1676562996000
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="65.011712"} 3052 1676562996000
    kv_cmd_duration_seconds_bucket{bucket="default",opcode="GET",le="+Inf"} 4052 1676562996000

Note that up to the highest bucket the histogram tracks (65s) there
are cumulatively 3052 samples; however at the "infinity" bucket there
are an additional 1000 samples. These are also reflected in the _count
metric.

Change-Id: I3491997ce50de756f0d414ddf345bddf8e07fd97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-17 10:58:20.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-17 10:58:50.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338557/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-17 11:45:12.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1193/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/statistics/prometheus_collector.cc:57:50: error: no member named "getOverflowCount" in "HdrHistogram" [clang-diagnostic-error]
    histData.sampleCount = v.getValueCount() + v.getOverflowCount();
                                                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1193/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1193/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1434/ : FAILURE

Compile error at ..\kv_engine\statistics\prometheus_collector.cc(57): error C2039: "getOverflowCount": is not a member of "HdrHistogram" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1434/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1155/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1155/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1220/ : FAILURE

Compile error at [2023-02-17T11:27:33.535Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1220/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1222/ : FAILURE

Compile error at [2023-02-17T11:05:59.211Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1222/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1218/ : FAILURE

Compile error at [2023-02-17T11:37:19.149Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1218/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1550/ : FAILURE

Compile error at [2023-02-17T11:44:53.636Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1550/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1211/ : FAILURE

Compile error at [2023-02-17T11:26:37.169Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1211/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1184/ : FAILURE

Compile error at [2023-02-17T11:16:56.498Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: no member named "getOverflowCount" in "HdrHistogram"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1184/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1210/ : FAILURE

Compile error at [2023-02-17T11:37:56.759Z] ../kv_engine/statistics/prometheus_collector.cc:57:50:
error: ?const class HdrHistogram? has no member named ?getOverflowCount?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1210/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22804/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
